Fix NoClassDefFoundError in Java 9+